--- a/input.conf
+++ b/input.conf
@@ -4,11 +4,11 @@
 
 # Play / pause
 SPACE cycle pause
-t cycle pause
+e cycle pause
 
-# YouTube-like seek (j/l)
-h seek -10
-n seek +10
+# YouTube-like seek 
+o seek -10
+u seek +10
 
 # Small arrow seeks
 LEFT seek -5
